CLI: fix temp file permissions